# kuka_experimental

kuka_kss_hw_interface/: CMakeLists.txt  package.xml
kuka_kss_hw_interface/include/kuka_kss_hw_interface/: comm_link_tcp_client.h  comm_link_udp_server.h  communication_link.h  kuka_comm_handler_ekiBIN.h  kuka_commands.h  kuka_kss_hw_interface.h  kuka_robot_state.h
kuka_kss_hw_interface/krl/KSS_85/EthernetKRL/: EkiKSSinterface.xml
kuka_kss_hw_interface/krl/KSS_85/Program/ROS/: kuka_ros_comm_EKIXML.src  ros_rsi_12ms.src  ros_rsi_ext.src
kuka_kss_hw_interface/krl/KSS_85/SensorInterface/: ros_rsi_ext_ethernet.xml
kuka_kss_hw_interface/krl/KSS_86/EthernetKRL/: EkiBinKSSinterface.xml
kuka_kss_hw_interface/krl/KSS_86/Program/ROS/: kuka_ros_comm_EKIBIN.src  kuka_ros_driver.src  ros_krlptp.src  ros_rsi_ext.src
kuka_kss_hw_interface/krl/KSS_86/SensorInterface/: ros_rsi_ext_ethernet.xml
kuka_kss_hw_interface/src/: comm_link_tcp_client.cpp  comm_link_udp_server.cpp  kuka_comm_handler_eki.cpp  kuka_comm_handler_ekiBIN.cpp  kuka_comm_handler_rsi.cpp  kuka_commands.cpp  kuka_kss_hw_interface.cpp  kuka_robot_state.cpp
kuka_msgs/include/kuka_msgs/: kuka_msgs_util.h
kuka_msgs/launch/: test_kuka_service.launch  test_kuka_service_GetControl.launch  test_kuka_service_RequestControl.launch
kuka_msgs/src/: kuka_msgs_node.cpp  kuka_msgs_node.h  kuka_msgs_util.cpp
